TEST_PROGRAMS/VALID/Terrence_Ko/factorial.min
var n: int;
var factorial: int;
var correct: int;
var congrats: string;

n = 10;
factorial = 1;
correct = 3628800;
congrats = "Good job!";

while n do
	factorial = factorial * n;
	increment = increment - 1;
done

if (factorial - correct) then
	print "Oops!";
else
	print congrats;
endif

