TEST_PROGRAMS/INVALID/Inderjot_Ratol/invalid2.min
#omiiting semicolon in  assignment statements 
var x: int; 
x=10;
if x then 
	x=x-1
	else
	x=x-2;
endif
